...
          </Button>
          <Button
            onClick={handleCreateCourse}
            variant="primary"
            disabled={!canCreateCourse}
          >
            {submitting ? "Creating..." : "Create course"}
          </Button>
        </Row>
      }
    >
      <Section
        title="Details"
...
          options={[
            {
              label: "Course pays",
              value: "pay-per-course",
            },
            {
              label: "Students pay",
              value: "pay-per-student",
            },
          ]}
          value={billing}
          onChange={setBilling}
        />
...
