...
          <p>
            Are you a teacher? Start improving student outcomes with
            FeatureBench.
          </p>
          <Spacer size={4} />
          <Button onClick={() => setNewCourseModalOpen(true)}>
            Create a new course
          </Button>
        </Card>
      </main>
      <CreateCourseModal
        open={newCourseModalOpen}
        onClose={() => setNewCourseModalOpen(false)}
...
