name: Create assignment
seedFile: fixtures/course-teacherpays.sql
steps:
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - tapOn:
      text: E2E Test Course
  - tapOn:
      text: Create a new assignment
  - typeText:
      placeholder: e.g., HW 1
      text: E2E Test Assignment
  - typeText:
      placeholder: What is this assignment about?
      text: This is a test assignment, generated by and for E2E tests.
  - typeText:
      dataCy: due-date
      text: "2035-12-20T00:00:00"
  - typeText:
      placeholder: e.g., 100
      text: "100"
      allowScroll: true
  ##############################################################################
  # Upload the primary signature
  - selectFile:
      filePath: cypress/fixtures/SLDPRT/test/test.good.SLDPRT
      dataCy: part-file-0
      allowScroll: true
  - assertVisible:
      text: Prescan uploaded successfully.
  ##############################################################################
  # Upload a partially correct signature
  # - tapOn:
  #     text: Add Signature
  # - selectFile:
  #     filePath: cypress/fixtures/SLDPRT/test/test.no-chamfer.SLDPRT
  #     dataCy: part-file-1
  #     allowScroll: true
  # -
  ##############################################################################
  # Save the assignment
  - tapOn:
      text: Create assignment
  - waitFor: 1000
  - assertVisible:
      text: E2E Test Assignment
      allowScroll: true
