# yaml-language-server: $schema=https://raw.githubusercontent.com/jackcrane/cypress-yaml-plugin/main/schema.json

# This test suite ensures that TAs are not asked to pay for their participation in a course.

name: Create course
seedFile: fixtures/account.sql
steps:
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - createAndAffiliateStripeCustomer:
      dbId: cmj9ffow70000qr6banbe3856
      name: Test Teacher,
      email: test@featurebench-test.com
  - tapOn:
      text: "Create a new course"
  - typeText:
      placeholder: "e.g., Intro to CAD"
      text: E2E Test Course
      allowScroll: true
  - typeText:
      placeholder: "e.g., ENGR 1701"
      text: E2E 222
      allowScroll: true
  - tapOn:
      text: "Students pay"
  - tapOn:
      text: "Create course"
  - assertVisible:
      text: "E2E Test Course"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-row-E2E Test Course-E2E 222"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-type-E2E Test Course-teacher"
      allowScroll: true
  - forceSetJoinCode:
      code: E2E
  ################################################################################
  # Checking to see that a student is in fact charged for the course
  - createAndAffiliateStripeCustomer:
      dbId: cmj9ff2w70000qr6banbe3d56 # TA
      name: Test TA,
      email: ta@featurebench-test.com
  - authenticateUser:
      username: ta@featurebench-test.com
      password: Password!
  - open: /
  - waitFor: 200
  - assertStripeCustomerValue:
      dbId: cmj9ff2w70000qr6banbe3d56 # ta
      balance: 0
  - typeText:
      placeholder: "e.g., STU-1A2B3C"
      text: TA-E2E
  - tapOn:
      text: "Join course"
  - waitFor: 10000
  - assertStripeCustomerValue:
      dbId: cmj9ff2w70000qr6banbe3d56 # ta
      balance: 0
  - assertVisible:
      dataCy: "enrollment-row-E2E Test Course-E2E 222"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-type-E2E Test Course-ta"
      allowScroll: true
  - assertStripeCustomerValue:
      dbId: cmj9ffow70000qr6banbe3856 # Teacher
      balance: 0
